# Telegram-Bot-Library

./: pyproject.toml
telebot/: client.py  exceptions.py  models.py  pyproject.toml
telebot/core/: client.py
telebot/test/: test_send_message.py
telebot_lite/core/: client.py  exception.py
telebot_lite/test/: test_send_message.py
